--- a/001.html
+++ b/001.html
@@ -13,11 +13,43 @@
     <h4>標題4</h4>
     <h5>標題5</h5>
     <h6>標題6</h6>
+    <a href="https://tw.yahoo.com" target="_blank">yahoo</a>
+    <a href="002.html">002</a>
+    <!-- 
+        hypertext reference
+     -->
     <p>
         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptate inventore totam dicta placeat, veritatis nisi quo nemo esse dolorum mollitia aliquid dolorem deleniti, nihil sed. Eum, officia est. Repellat, odit?
     </p>
     <p>
         面前責任主角社會主義完善國有章節要在，標準防止日常，儘快作出關閉筆記本灌水獨立順利不起出售藥品接觸，常常請大家一段熱線供應商住宅焦點，加大筆者電視劇下一頁之家兒童為此小區一定要關係恢復，強化全市走向車輛加油當年減少俱樂部偉大靈魂，一臉他們的，性感職位基礎上豐富圖書館可惜忍不住，結構到底工作高級要求，以前是否增長，禮物加上更是慢慢有所典型制度，這次對付，案件方向上升共同我家分享練習昨天品質紛紛不明白路線每頁經過，郵件合理只是稿件精美坐在批發這麼多召開共享版相關圖片谷歌，另外主板是指小學，感到心中循環，培養先。
     </p>
+    
+    <ul>
+        <li>項目清單</li>
+        <li>項目清單</li>
+        <li>項目清單</li>
+        <li>項目清單</li>
+        <li>項目清單</li>
+    </ul>
+    <ol>
+        <li>編號清單</li>
+        <li>編號清單</li>
+        <li>編號清單</li>
+        <li>編號清單</li>
+        <li>編號清單</li>
+    </ol>
+    <dl>
+        <dt>定義清單標題</dt>
+        <dd>定義清單敘述</dd>
+        <dt>定義清單標題</dt>
+        <dd>定義清單敘述</dd>
+        <dt>定義清單標題</dt>
+        <dd>定義清單敘述</dd>
+        <dt>定義清單標題</dt>
+        <dd>定義清單敘述</dd>
+        <dt>定義清單標題</dt>
+        <dd>定義清單敘述</dd>
+    </dl>
 </body>
 </html>
