--- a/001.html
+++ b/001.html
@@ -15,6 +15,9 @@
     <h6>標題6</h6>
     <a href="https://tw.yahoo.com" target="_blank">yahoo</a>
     <a href="002.html">002</a>
+    <a href="about/about001.html">about 001 (相對)</a>
+    <a href="/about/about001.html">about 001 (絕對)</a>
+    
     <!-- 
         hypertext reference
      -->
