--- a/about/about001.html
+++ b/about/about001.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>about 001</h1>
-    <a href="../001.html">001</a>
-    <a href="/001.html">001</a>
+    <a href="../001.html">001(相對)</a>
+    <a href="/001.html">001(絕對)</a>
 </body>
 </html>
