--- a/001.html
+++ b/001.html
@@ -13,7 +13,7 @@
     <h4>標題4</h4>
     <h5>標題5</h5>
     <h6>標題6</h6>
-    <a href="https://tw.yahoo.com" target="_blank">yahoo</a>
+    <a href="https://tw.yahoo.com" target="_blank" title="雅虎奇摩">yahoo</a>
     <a href="002.html">002</a>
     <a href="about/about001.html">about 001 (相對)</a>
     <a href="/about/about001.html">about 001 (絕對)</a>
