--- a/001.html
+++ b/001.html
@@ -21,6 +21,7 @@
     <!-- 
         hypertext reference
      -->
+    <img src="001.jpg" alt="海灘" title="beach" width="" height="200">
     <p>
         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptate inventore totam dicta placeat, veritatis nisi quo nemo esse dolorum mollitia aliquid dolorem deleniti, nihil sed. Eum, officia est. Repellat, odit?
     </p>
