--- a/001.html
+++ b/001.html
@@ -21,7 +21,10 @@
     <!-- 
         hypertext reference
      -->
-    <img src="001.jpg" alt="海灘" title="beach" width="" height="200">
+    <img src="images/001.jpg" alt="海灘" title="beach" width="" height="200">
+    <img src="https://picsum.photos/400/300?random=1" alt="">
+    <img src="https://picsum.photos/400/300?random=2" alt="">
+    <img src="https://picsum.photos/id/1003/400" alt="">
     <p>
         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptate inventore totam dicta placeat, veritatis nisi quo nemo esse dolorum mollitia aliquid dolorem deleniti, nihil sed. Eum, officia est. Repellat, odit?
     </p>
