--- a/table.html
+++ b/table.html
@@ -15,10 +15,13 @@
             <th>D</th>
         </tr>
         <tr>
-            <td>E</td>
+            <td rowspan="2">E</td>
             <td>F</td>
             <td>G</td>
             <td>H</td>
+        </tr>
+        <tr>
+            <td colspan="3">J</td>
         </tr>
     </table>
 </body>
