--- a/CSS/basic.html
+++ b/CSS/basic.html
@@ -5,25 +5,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <!-- <link rel="stylesheet" href="style.css"> -->
+    <link rel="stylesheet" href="style.css">
     <style>
         h2 {
-            color: #568f39;
+            color: #ff441f;
         }
         .abc {
-            color: pink;
+            color: rgb(251, 255, 0);
         }
+        
         #xyz {
             color: palegreen;
         }
     </style>
+
 </head>
 <body>
-    <h1 class="abc">CSS Cascade Style Sheet</h1>
+    <h1 class="abc qqq">CSS Cascade Style Sheet</h1>
     <div style="color:blue;">串接樣式表</div>
-    <h2>分類</h2>
+    <h2 class="abc" id="xyz" style="color:gold">分類</h2>
     <ul>    
-        <li id="xyz">嵌入式</li>
+        <li>嵌入式</li>
         <li class="abc">內部</li>
         <li class="abc">外部</li>
     </ul>
@@ -33,5 +35,8 @@
         <li>類別 class (可重複使用)</li>
         <li>id （不可重複使用）</li>
     </ul>
+    <h2>權重 Specificity</h2>
+    <div>物以稀為貴</div>
+    <div>嵌入式 > id > class > tag</div>
 </body>
 </html>
