--- a/CSS/basic-2.html
+++ b/CSS/basic-2.html
@@ -5,8 +5,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        body {
+            /* color: #00998a;  */
+            /* 16進位 */
+            /* color: rgb(237 89 89); */
+            /* color: rgba(222,34,66,.5) */
+            color: rgb(100% 100% 0%);
+        }
+    </style>
 </head>
 <body>
-    
+    <h1>title</h1>
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime quam amet fuga! Ipsam, atque autem? Iure aut temporibus minus repudiandae officia? Aut saepe animi itaque! Quasi perferendis ullam nesciunt at?
+    </p>
+    <ul>
+        <li>list</li>
+        <li>list</li>
+        <li>list</li>
+        <li>list</li>
+        <li>list</li>
+    </ul>
 </body>
 </html>
