--- a/CSS/basic.html
+++ b/CSS/basic.html
@@ -5,18 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <!-- <link rel="stylesheet" href="style.css"> -->
     <style>
+        @import url('style.css');
         h2 {
             color: #ff441f;
         }
         .abc {
             color: rgb(251, 255, 0);
         }
-        
         #xyz {
             color: palegreen;
         }
+
     </style>
 
 </head>
