--- a/CSS/basic-2.html
+++ b/CSS/basic-2.html
@@ -11,13 +11,38 @@
             /* 16進位 */
             /* color: rgb(237 89 89); */
             /* color: rgba(222,34,66,.5) */
-            color: rgb(100% 100% 0%);
+            /* color: rgb(100% 100% 0%); */
+
+            text-align: justify;
+            /* left, center, right , justify */
+
+            text-decoration: red 1px solid underline;
+            /* underline, overline, line-through, none */
+
+            /* text-decoration-color: red; */
+            /* text-decoration-style: wavy; */
+            /* solid, dotted, dashed, double, wavy */
+            /* text-decoration-thickness: 1px; */
+            /* text-decoration-line: underline; */
+            /* underline, overline, line-through, none */
+
+        }
+        a {
+            text-decoration: none;
+            color: red;
         }
     </style>
 </head>
 <body>
     <h1>title</h1>
+    <a href="#">link</a>
     <p>
+        措施我國也就是，如果您你有員工擔任目qwer光記得兩人按鈕手上輕輕離線種類螢幕，兩人各國最好上漲今後趨勢，高中對他網絡請點擊，政府數量一本無比去年紅色一身而且規劃打擊陽明山，比賽除了qwerxwㄊ陽明山剛才一臉空間刺激參與就要，我對給我提醒檢驗地區客戶和他對外狀態，幸福孩子房東很難，保留想想動物典型歐美軍隊報名，多麼大戰東京，類型好像，設定含有神經忽然我也文化文字自行，目光一年承諾市場校園，公里現代故意取消基本上諮詢神秘人大而已一個法院，消息管理系統，能力一口氣，公路心理對她當中相應以前和你明白軍事一起隨後，奇蹟先進性本週把它幫助調節東京本週查看一套所說失敗讓我，阿宅人民共和國關注展示欄目尚未你能，食品那樣報價智慧優惠發表房屋道德沒有任何你看循環網咖，圖像化贏得恐怕生命斗內法國這麼多，我愛完整同事同學播放不可以評論不肯近日都市，隨着最後我的心，不再成立達到賺錢一座沒人，安排批評患者左右紡織很久不可招商，基礎聯合無關幫忙不可以存儲一身可能會像素，稱為台中，兩個人士大型成功傳真專輯雙方招商所在地人們街道時刻增長最為，衝擊顯卡榮譽辛苦採訪紛紛持續所在地定義，你們的放在進了南方畫面不但，上午作出型號不見等等努力十。
+    </p>
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime quam amet fuga! Ipsam, atque autem? Iure aut temporibus minus repudiandae officia? Aut saepe animi itaque! Quasi perferendis ullam nesciunt at?
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime quam amet fuga! Ipsam, atque autem? Iure aut temporibus minus repudiandae officia? Aut saepe animi itaque! Quasi perferendis ullam nesciunt at?
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime quam amet fuga! Ipsam, atque autem? Iure aut temporibus minus repudiandae officia? Aut saepe animi itaque! Quasi perferendis ullam nesciunt at?
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime quam amet fuga! Ipsam, atque autem? Iure aut temporibus minus repudiandae officia? Aut saepe animi itaque! Quasi perferendis ullam nesciunt at?
     </p>
     <ul>
