--- a/CSS/basic-2.html
+++ b/CSS/basic-2.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Anek+Telugu:wght@200;400;700&family=Noto+Sans+TC:wght@100;400;900&display=swap" rel="stylesheet">
     <style>
         h1 {
             font-weight: lighter;
@@ -33,7 +36,13 @@
             /* letter-spacing: 10px; */
             /* word-spacing: 10px; */
             /* letter-spacing: -5px; */
+            font-family: 'Anek Telugu','Noto Sans TC',sans-serif
+            /* 
+            sans-serif 非襯線字
+            serif 襯線字
+            */
         }
+
         a {
             text-decoration: none;
             color: red;
