--- a/CSS/element.html
+++ b/CSS/element.html
@@ -6,9 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
+        * {
+            box-sizing: border-box;
+        }
         .block {
-            width: 100px;
-            height: 100px;
+            width: 400px;
+            /* height: 100px; */
+
 
             background-color: #098;
             /* margin: 100px; */
@@ -32,13 +36,34 @@
             /* margin-inline: auto;     */
             /* direction: rtl; */
 
-            margin: auto;
+            /* margin: auto; */
+
+            padding: 10px;
+
+            /* padding-left: 30px; */
+            /* padding-right: 30px; */
+            /* padding-top: ; */
+            /* padding-bottom: ; */
+
+            /* padding-block-start:;     */
+            /* padding-block-end:;  */
+            /* padding-block: 100px;  */
+            /* padding-inline-start:auto;     */
+            /* padding-inline-end:;     */
+            /* padding-inline: auto;      */
+
+            border:10px solid red;
+
+            /* 
+                總寬度 = width + padding + border
+                總高度 = height + padding + border
+            */
         }
     </style>
 </head>
 <body>
-    <div class="block"></div>
-    <div class="block"></div>
-    <div class="block"></div>
+    <div class="block">
+        新聞電池尺寸對你打造字幕練習不了東西看見十二，放棄藝術喜愛文字諮詢功能黑色當天充滿競爭，增強而是法人中壢我還每個人德國，提到交流加速維護內部社會瞭解是以，看見像是他說調查，商機南方日常，五金位元力道興趣藝術總數行情模組，想要降低創作發貼追求頓時特徵，文檔。
+    </div>
 </body>
 </html>
