--- a/CSS/element-3.html
+++ b/CSS/element-3.html
@@ -11,10 +11,13 @@
         }
         .box {
             width: 300px;
-            /* viewport width */
+            /* vw:viewport width, vh: viewport height */
             height: 100%;
             background-color: #098;
         }
+        /* 
+            高度若要設定百分比，父層必須要有高度。
+        */
     </style>
 </head>
 <body>
