--- a/CSS/element.html
+++ b/CSS/element.html
@@ -14,7 +14,7 @@
             /* height: 100px; */
 
 
-            background-color: #098;
+            background-color: rgba(0, 153, 135, 0.276);
             /* margin: 100px; */
             /* margin-left: auto; */
             /* margin-right: auto; */
@@ -38,7 +38,7 @@
 
             /* margin: auto; */
 
-            padding: 10px;
+            padding:50px;
 
             /* padding-left: 30px; */
             /* padding-right: 30px; */
@@ -58,10 +58,23 @@
                 總寬度 = width + padding + border
                 總高度 = height + padding + border
             */
+
+            display: block;
+            /* 
+                inline 沒有width,height
+                border,padding上下看得見但不影響空間
+                margin上下無效
+            */
         }
     </style>
 </head>
 <body>
+    <div class="block">
+        新聞電池尺寸對你打造字幕練習不了東西看見十二，放棄藝術喜愛文字諮詢功能黑色當天充滿競爭，增強而是法人中壢我還每個人德國，提到交流加速維護內部社會瞭解是以，看見像是他說調查，商機南方日常，五金位元力道興趣藝術總數行情模組，想要降低創作發貼追求頓時特徵，文檔。
+    </div>
+    <div class="block">
+        新聞電池尺寸對你打造字幕練習不了東西看見十二，放棄藝術喜愛文字諮詢功能黑色當天充滿競爭，增強而是法人中壢我還每個人德國，提到交流加速維護內部社會瞭解是以，看見像是他說調查，商機南方日常，五金位元力道興趣藝術總數行情模組，想要降低創作發貼追求頓時特徵，文檔。
+    </div>
     <div class="block">
         新聞電池尺寸對你打造字幕練習不了東西看見十二，放棄藝術喜愛文字諮詢功能黑色當天充滿競爭，增強而是法人中壢我還每個人德國，提到交流加速維護內部社會瞭解是以，看見像是他說調查，商機南方日常，五金位元力道興趣藝術總數行情模組，想要降低創作發貼追求頓時特徵，文檔。
     </div>
