--- a/CSS/grid.html
+++ b/CSS/grid.html
@@ -9,6 +9,9 @@
         * {
             box-sizing: border-box;
         }
+        .t-center {
+            text-align: center;
+        }
         .container {
             width: 1200px;
             margin: auto;
@@ -57,7 +60,7 @@
     </div>
     <div class="container row">
         <div class="col-8">
-            <h2>title</h2>
+            <h2 class="t-center">title</h2>
             <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit, placeat ab! Ipsum impedit deserunt molestiae nulla magnam explicabo eum optio?
             </p>
