--- a/CSS/flex-card.html
+++ b/CSS/flex-card.html
@@ -8,6 +8,8 @@
     <style>
         * {
             box-sizing: border-box;
+            margin: 0;
+            padding: 0;
         }
         .container {
             width: 1200px;
@@ -21,13 +23,27 @@
 
         }
         .card {
-            border: 1px solid #000;
+            border: 1px solid #d7d7d7;
+            border-radius: 4px;
+            overflow: hidden;
+            box-shadow: 0px 0px 10px 0px rgb(0 0 0 / .2);
         }
         .card-body {
             padding: 15px;
         }
         img {
             width: 100%;
+            /* vertical-align: top; */
+            display: block;
+        }
+        .card-img {
+            aspect-ratio: 1 / 1;
+            background-color: #098;
+        }
+        .card-img img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
         }
     </style>
 </head>
@@ -35,7 +51,21 @@
     <div class="container">
         <div class="col">
             <div class="card">
-                <div>
+                <div class="card-img">
+                    <img src="https://picsum.photos/id/32/800/400" alt="">
+                </div>
+                <div class="card-body">
+                    <h3>title</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur.
+                    </p>
+                    <a href="#">link</a>
+                </div>
+            </div>
+        </div>
+        <div class="col">
+            <div class="card">
+                <div class="card-img">
                     <img src="https://picsum.photos/id/32/800/600" alt="">
                 </div>
                 <div class="card-body">
@@ -49,7 +79,7 @@
         </div>
         <div class="col">
             <div class="card">
-                <div>
+                <div class="card-img">
                     <img src="https://picsum.photos/id/32/800/600" alt="">
                 </div>
                 <div class="card-body">
@@ -57,17 +87,6 @@
                     <p>
                         Lorem ipsum dolor sit amet consectetur.
                     </p>
-                    <a href="#">link</a>
-                </div>
-            </div>
-        </div>
-        <div class="col">
-            <div class="card">
-                <div>
-                    <img src="https://picsum.photos/id/32/800/600" alt="">
-                </div>
-                <div class="card-body">
-                    <h3>title</h3>
                     <p>
                         Lorem ipsum dolor sit amet consectetur.
                     </p>
