--- a/CSS/flex-card.html
+++ b/CSS/flex-card.html
@@ -12,6 +12,7 @@
             padding: 0;
         }
         .container {
+            padding-block:100px;
             width: 1200px;
             margin: auto;
             display: flex;
@@ -25,8 +26,10 @@
         .card {
             border: 1px solid #d7d7d7;
             border-radius: 4px;
-            overflow: hidden;
+            
             box-shadow: 0px 0px 10px 0px rgb(0 0 0 / .2);
+
+            position: relative;
         }
         .card-body {
             padding: 15px;
@@ -39,11 +42,25 @@
         .card-img {
             aspect-ratio: 1 / 1;
             background-color: #098;
+            overflow: hidden;
         }
         .card-img img {
             width: 100%;
             height: 100%;
             object-fit: cover;
+        }
+        .card-avatar {
+            width: 80px;
+            height: 80px;
+            background-color: #f00;
+            border: 2px #fff solid;
+            box-shadow: 0px 0px 10px 0px rgb(0 0 0 / .2);
+            position: absolute;
+            top:-35px;
+            /* left: 5px; */
+            right: 5px;
+            border-radius: 50%;
+            /* clip-path: circle(); */
         }
     </style>
 </head>
@@ -51,6 +68,7 @@
     <div class="container">
         <div class="col">
             <div class="card">
+                <div class="card-avatar"></div>
                 <div class="card-img">
                     <img src="https://picsum.photos/id/32/800/400" alt="">
                 </div>
@@ -65,6 +83,8 @@
         </div>
         <div class="col">
             <div class="card">
+                <div class="card-avatar"></div>
+
                 <div class="card-img">
                     <img src="https://picsum.photos/id/32/800/600" alt="">
                 </div>
@@ -79,6 +99,8 @@
         </div>
         <div class="col">
             <div class="card">
+                <div class="card-avatar"></div>
+
                 <div class="card-img">
                     <img src="https://picsum.photos/id/32/800/600" alt="">
                 </div>
