--- a/CSS/flex-card.html
+++ b/CSS/flex-card.html
@@ -19,7 +19,7 @@
             flex-wrap: wrap;
         }
         .col {
-            padding-inline: 10px;
+            padding: 15px;
             width: 400px;
 
         }
@@ -80,10 +80,136 @@
         .card-collect:hover {
             background-color: #098;
         }
+        nav {
+            width: 100%;
+            height: 70px;
+            background-color: #fa0;
+            text-align: center; 
+            line-height: 70px;
+            position: fixed;
+            top: 0;
+            left: 0;
+            z-index: 9999;
+        }
+        .tag {
+            display: inline-block;
+            padding: 8px 30px;
+            background-color: #0af;
+            position: relative;
+            bottom: 30px;
+        }
     </style>
 </head>
 <body>
+    <nav>
+        <a href="#">link</a>
+        <a href="#">link</a>
+        <a href="#">link</a>
+    </nav>
     <div class="container">
+        <div class="col">
+            <div class="card">
+                <div class="card-avatar"></div>
+                <div class="card-img">
+                    <div class="card-collect"></div>
+                    <img src="https://picsum.photos/id/32/800/400" alt="">
+                </div>
+                <div class="card-body">
+                    <div class="tag">TEST</div>
+                    <h3>title</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur.
+                    </p>
+                    <a href="#">link</a>
+                </div>
+            </div>
+        </div>
+        <div class="col">
+            <div class="card">
+                <div class="card-avatar"></div>
+
+                <div class="card-img">
+                    <img src="https://picsum.photos/id/32/800/600" alt="">
+                </div>
+                <div class="card-body">
+                    <h3>title</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur.
+                    </p>
+                    <a href="#">link</a>
+                </div>
+            </div>
+        </div>
+        <div class="col">
+            <div class="card">
+                <div class="card-avatar"></div>
+
+                <div class="card-img">
+                    <img src="https://picsum.photos/id/32/800/600" alt="">
+                </div>
+                <div class="card-body">
+                    <h3>title</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur.
+                    </p>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur.
+                    </p>
+                    <a href="#">link</a>
+                </div>
+            </div>
+        </div>
+        <div class="col">
+            <div class="card">
+                <div class="card-avatar"></div>
+                <div class="card-img">
+                    <div class="card-collect"></div>
+                    <img src="https://picsum.photos/id/32/800/400" alt="">
+                </div>
+                <div class="card-body">
+                    <h3>title</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur.
+                    </p>
+                    <a href="#">link</a>
+                </div>
+            </div>
+        </div>
+        <div class="col">
+            <div class="card">
+                <div class="card-avatar"></div>
+
+                <div class="card-img">
+                    <img src="https://picsum.photos/id/32/800/600" alt="">
+                </div>
+                <div class="card-body">
+                    <h3>title</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur.
+                    </p>
+                    <a href="#">link</a>
+                </div>
+            </div>
+        </div>
+        <div class="col">
+            <div class="card">
+                <div class="card-avatar"></div>
+
+                <div class="card-img">
+                    <img src="https://picsum.photos/id/32/800/600" alt="">
+                </div>
+                <div class="card-body">
+                    <h3>title</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur.
+                    </p>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur.
+                    </p>
+                    <a href="#">link</a>
+                </div>
+            </div>
+        </div>
         <div class="col">
             <div class="card">
                 <div class="card-avatar"></div>
